[CHORES] add order feature

--- a/src/main/resources/templates/OrderHistory.html
+++ b/src/main/resources/templates/OrderHistory.html
@@ -30,13 +30,11 @@
         </ul>
       </td>
       <td>
-        <a th:href="@{/order/pay/{orderId}(orderId=${order.id})}"
-           class="btn btn-primary btn-sm">Pay</a>
+        <a th:href="@{/order/pay/{orderId}(orderId=${order.id})}" class="btn btn-primary btn-sm">Pay</a>
       </td>
     </tr>
     </tbody>
   </table>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
