--- a/src/main/resources/templates/CreateOrder.html
+++ b/src/main/resources/templates/CreateOrder.html
@@ -2,35 +2,19 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Create Order</title>
+  <title>Order History</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container my-4">
-  <h2>Create Order</h2>
-  <form th:action="@{/order/create}" method="post">
+  <h2>Order History</h2>
+  <form th:action="@{/order/history}" method="post">
     <div class="form-group">
       <label for="author">Your Name</label>
       <input type="text" class="form-control" id="author" name="author" required>
     </div>
-
-    <h3>Select Products</h3>
-    <div class="form-group">
-      <div th:each="product : ${products}" class="form-check">
-        <input type="checkbox" class="form-check-input"
-               th:id="${product.productId}"
-               th:value="${product.productId}"
-               name="selectedProducts">
-        <label class="form-check-label" th:for="${product.productId}">
-          <span th:text="${product.productName}"></span>
-          (Quantity: <span th:text="${product.productQuantity}"></span>)
-        </label>
-      </div>
-    </div>
-
-    <button type="submit" class="btn btn-primary">Create Order</button>
+    <button type="submit" class="btn btn-primary">Show Order History</button>
   </form>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
