--- a/src/main/resources/templates/CreateOrder.html
+++ b/src/main/resources/templates/CreateOrder.html
@@ -2,18 +2,30 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Order History</title>
+  <title>Create Order</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container my-4">
-  <h2>Order History</h2>
-  <form th:action="@{/order/history}" method="post">
+  <h2>Create Order</h2>
+  <form th:action="@{/order/create}" method="post">
     <div class="form-group">
       <label for="author">Your Name</label>
       <input type="text" class="form-control" id="author" name="author" required>
     </div>
-    <button type="submit" class="btn btn-primary">Show Order History</button>
+    <div class="form-group">
+      <h3>Select Products</h3>
+      <div th:each="product : ${products}" class="form-check">
+        <input type="checkbox" class="form-check-input"
+               th:id="${product.productId}"
+               th:value="${product.productId}"
+               name="selectedProducts">
+        <label class="form-check-label" th:for="${product.productId}"
+               th:text="${product.productName + ' (Qty: ' + product.productQuantity + ')'}">
+        </label>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-primary">Create Order</button>
   </form>
 </div>
 </body>
