--- a/src/main/resources/templates/OrderHistoryForm.html
+++ b/src/main/resources/templates/OrderHistoryForm.html
@@ -10,12 +10,11 @@
   <h2>Order History</h2>
   <form th:action="@{/order/history}" method="post">
     <div class="form-group">
-      <label for="author">Enter Your Name</label>
+      <label for="author">Your Name</label>
       <input type="text" class="form-control" id="author" name="author" required>
     </div>
-    <button type="submit" class="btn btn-primary">View Orders</button>
+    <button type="submit" class="btn btn-primary">Show Order History</button>
   </form>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
